[package]
name = "wrapped-vec"
version = "0.2.1"
authors = ["David Futcher <david@futcher.io>"]
license = "MIT OR Apache-2.0"
description = "Macro for generating wrapped Vec types and associated boilerplate"
repository = "https://github.com/bobbo/wrapped-vec"
readme = "README.md"
keywords = ["vec", "vector", "collection", "iterator", "codegen"]
categories = ["rust-patterns", "development-tools", "data-structures"]

[lib]
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"